* Minor change
** Major change

2.0-1
      *  Scoping issue resolved; can now call visreg, visreg2d from a
      	 function without fit or data present in the global environment
	 (Thank you to Johannes Kutsam for pointing this out)

2.0-0
      ** Added 'overlay' option
      ** Substantial internal refactoring to separate calculations / model
         manipulations from plotting
      ** Changed how 'breaks' are handled for continuous 'by' variables,
      	 both in setup and appearance, with option to directly specify
	 where breaks should occur
      *  Added print.cond option, with warning when user tries to plot
         a main effect in the presence of interactions
      *  Extrapolation now allowed
      *  Addition of 'rug' option
      *  Addition of 'band' option to suppress confidence bands
      *  Fixed bug for models which were called with 'subset' option
      *  Added 'ask' option to turn off prompting when starting a new page
      	 of plots
      *  Minor bug fix for passing of lattice options
      *  Expanded suite of tests

1.2-1
      *  Fixed bug in calculation of confidence bands for quasilikelihood
      	 models (thank you to Ariel Muldoon for pointing this out)
      *  Fixed side-effect which caused trellis settings to be changed
      	 when visreg changed them internally

1.2-0
      *  Fixed bug in 'removeFormulaFormatting'; further compatibility
      	 for splines with use of 'cond'
      *  Added support for models from the 'gam' package
      *  Improved support for 'coxph' models from 'survival' package
      *  Fixed bug in use of ns/bs with type='effect'

1.1-1
      *  Fixed bug in 'removeFormulaFormatting'; old version was
      	 incompatible with use of ns() or bs() for splines

1.1-0
      *  Added support for multiple response (class 'mlm') models
      *  Fixed bug in 'ask' behavior when multiple plots created
      *  Allow finer control of plots with line.par, fill.par, points.par