@@ -2,6 +2,8 @@
 ** Major change
 
 2.0-1
+      *  Fixed issue with levels of a factor being dropped from the model
+	 (Thank you to Johannes Kutsam for pointing this out)
       *  Scoping issue resolved; can now call visreg, visreg2d from a
       	 function without fit or data present in the global environment
 	 (Thank you to Johannes Kutsam for pointing this out)
